--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,3 +1,3 @@
 de:
-  label_rendering_parameter_plural: Darstellungs Parameter
-  label_show_description_plural: Beschreibung Anzeigen
+  label_rendering_parameter_plural: Darstellungsoptionen
+  label_show_description_plural: Beschreibung anzeigen
